--- a/companywebsite/static/products.html
+++ b/companywebsite/static/products.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>EduSoft Private Limited</title>
+    <title>RJsoftware Private Limited</title>
     <link rel="stylesheet" href="./css/layout.css" />
     <link rel="icon" href="./img/icon.png" type="image/x-icon" />
   </head>
 
   <body>
     <div class="container">
-      <div class="banner">EduSoft Private Limited.</div>
+      <div class="banner">RJsoftware Private Limited.</div>
       <div class="menu">
         <div class="menuitem"><a href="/static/home.html">Home</a></div>
-        <div class="menuitemselected">
-          <a href="/static/products.html">Products</a>
-        </div>
-        <div class="menuitem"><a>People</a></div>
-        <div class="menuitem"><a>Contact Us</a></div>
+        <div class="menuitemselected"><a href="/static/products.html">Products</a></div>
+        <div class="menuitem"><a href="/static/people.html">People</a></div>
+        <div class="menuitem"><a href="/static/contact.html">Contact Us</a></div>
       </div>
       <div class="content">
         <div class="productcontent">    
@@ -35,11 +33,81 @@
                   <div class="itemname">Tally Silver</div>
                   <div class="itemprice">Price: Rs.10,000.00 </div>
               </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/book1.jpg"  alt="product image">
+                </div>
+                <div class="itemname">Computer course</div>
+                <div class="itemprice">Price: Rs.5,000.00 </div>
+              </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/book2.jfif"  alt="product image">
+                </div>
+                <div class="itemname">Code</div>
+                <div class="itemprice">Price: Rs.6,000.00 </div>
+              </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/book3.jpg"  alt="product image">
+                </div>
+                <div class="itemname">Computer</div>
+                <div class="itemprice">Price: Rs.9,000.00 </div>
+              </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/book4.jpg"  alt="product image">
+                </div>
+                <div class="itemname">Computer</div>
+                <div class="itemprice">Price: Rs.6,500.00 </div>
+              </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/book5.jpg"  alt="product image">
+                </div>
+                <div class="itemname">C++</div>
+                <div class="itemprice">Price: Rs.10,000.00 </div>
+              </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/book6.jpg"  alt="product image">
+                </div>
+                <div class="itemname">Math in computer</div>
+                <div class="itemprice">Price: Rs.9,500.00 </div>
+              </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/book7.png"  alt="product image">
+                </div>
+                <div class="itemname">Computer</div>
+                <div class="itemprice">Price: Rs.7,000.00 </div>
+              </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/book8.jpg"  alt="product image">
+                </div>
+                <div class="itemname">Computer programing</div>
+                <div class="itemprice">Price: Rs.9,500.00 </div>
+              </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/book9.jpg"  alt="product image">
+                </div>
+                <div class="itemname">Computer application</div>
+                <div class="itemprice">Price: Rs.8,500.00 </div>
+              </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/book10.jpg"  alt="product image">
+                </div>
+                <div class="itemname">computer</div>
+                <div class="itemprice">Price: Rs.5,000.00 </div>
+              </div>
           </div>
           </div>        
       </div>
       <div class="footer">
-        Copyright &#169; 2021 EduSoft Private Limited, Developed by Obed Otto.
+        Copyright &#169; 2021 RJsoftware Private Limited, Developed by Janani.R
       </div>
     </div>
   </body>
